[package]
name = "gq_gmc"
authors = ["Raleigh Littles <raleighlittles@gmail.com>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/raleighlittles/GQ_Geiger_Counter_Comm_Protocol"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

chrono = "0.4.31"
csv = "1.3.0"
serialport = "4.2.2"